# mediarepository

./: README.md
.github/workflows/: backend.yml
backend/: .gitignore  CHANGES.rst  MANIFEST.in  Makefile  README.rst  instance.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
backend/requirements/: dev.txt
backend/scripts/: create_site.py
backend/src/kitconcept/mediarepository/: __init__.py  configure.zcml  interfaces.py  permissions.zcml  profiles.zcml  setuphandlers.py  testing.py
backend/src/kitconcept/mediarepository/content/: mediarepository.py
backend/src/kitconcept/mediarepository/locales/: README.rst  kitconcept.mediarepository.pot  update.py  update.sh
backend/src/kitconcept/mediarepository/locales/en/LC_MESSAGES/: kitconcept.mediarepository.po
backend/src/kitconcept/mediarepository/profiles/default/: browserlayer.xml  rolemap.xml  types.xml
backend/src/kitconcept/mediarepository/profiles/default/types/: Media_Repository.xml
backend/src/kitconcept/mediarepository/profiles/uninstall/: browserlayer.xml
backend/src/kitconcept/mediarepository/tests/: test_content_mediarepository.py  test_setup.py
backend/src/kitconcept/mediarepository/upgrades/: configure.zcml
backend/src/mediarepository/core/: __init__.py  configure.zcml  permissions.zcml  profiles.zcml  setuphandlers.py  testing.py
backend/src/mediarepository/core/locales/: README.rst  mediarepository.core.pot  update.py  update.sh
backend/src/mediarepository/core/profiles/default/: browserlayer.xml  rolemap.xml
backend/src/mediarepository/core/profiles/uninstall/: browserlayer.xml
backend/src/mediarepository/core/tests/: test_content_mediarepository.py  test_setup.py
backend/src/mediarepository/core/upgrades/: configure.zcml
(+2 files in other folders)
