[check-manifest]
ignore =
    .coveragerc
    .editorconfig
    .gitattributes
    .gitignore
    instance.yaml
    Makefile

[metadata]
version = 1.0.0a1
name = mediarepository.core
description = Media repository solution for Plone
long_description = file: README.rst, CHANGES.rst
classifiers=
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Plone
    Framework :: Plone :: Core
    Framework :: Plone :: 6.0
    Framework :: Zope
    Framework :: Zope :: 5
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
keywords = Python, Plone, DAM, Media Repository
author = kitconcept GmbH
author_email = info@kitconcept.com
url = https://github.com/kitconcept/mediarepository
license = GPL version 2

[options]
include_package_data = True
zip_safe = False
package_dir=
    =src
packages=find:
install_requires =
    importlib-metadata; python_version<"3.7"
    setuptools
    Plone
    plone.volto
    kitconcept.api

[options.packages.find]
where=src

[options.extras_require]
test =
    zest.releaser[recommended]
    plone.app.testing[robot]>=7.0.0a3
    plone.app.robotframework[test]>=2.0.0a5
    zope.testrunner
    plone.restapi[test]

[options.entry_points]
z3c.autoinclude.plugin =
    target = plone
console_scripts =
    update_locale = mediarepository.core.locales.update:update_locale

[bdist_wheel]
universal = 0
